cmake_minimum_required(VERSION 2.8)
project( ceimnet )
find_package(wxWidgets COMPONENTS core net base REQUIRED)
find_package(OpenCV REQUIRED)
include("${wxWidgets_USE_FILE}")
include_directories(${OpenCV_INCLUDE_DIR})
find_package(jetson-utils)
find_package(jetson-inference)
find_package(CUDA)
link_directories(/usr/lib/aarch64-linux-gnu/tegra)
cuda_add_executable( ${PROJECT_NAME} main.cpp )
target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES} ${OpenCV_LIBS} jetson-inference)
